--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@types/react-dom": "16.8.2",
     "bind-decorator": "^1.0.11",
     "classnames": "^2.2.6",
+    "idb": "^3.0.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
+    "shortid": "^2.2.14",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -29,5 +31,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/shortid": "0.0.29"
+  }
 }
