--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,46 +1,50 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Routineer",
+  "name": "Routineer - Helping you keep track of your routines",
   "icons": [
     {
       "src": "\/android-icon-36x36.png",
       "sizes": "36x36",
       "type": "image\/png",
-      "density": "0.75"
     },
     {
       "src": "\/android-icon-48x48.png",
       "sizes": "48x48",
-      "type": "image\/png",
-      "density": "1.0"
+      "type": "image\/png"
     },
     {
       "src": "\/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image\/png",
-      "density": "1.5"
+      "type": "image\/png"
     },
     {
       "src": "\/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image\/png",
-      "density": "2.0"
+      "type": "image\/png"
     },
     {
       "src": "\/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image\/png",
-      "density": "3.0"
+      "type": "image\/png"
     },
     {
       "src": "\/android-icon-192x192.png",
       "sizes": "192x192",
-      "type": "image\/png",
-      "density": "4.0"
+      "type": "image\/png"
+    },
+    {
+      "src": "\/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image\/png"
+    },
+    {
+      "src": "\/android-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#87a8d0",
+  "background_color": "#5f5f5f"
 }
