--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "\/android-icon-36x36.png",
       "sizes": "36x36",
-      "type": "image\/png",
+      "type": "image\/png"
     },
     {
       "src": "\/android-icon-48x48.png",
