--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -43,8 +43,8 @@
       "type": "image\/png"
     }
   ],
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#87a8d0",
-  "background_color": "#5f5f5f"
+  "background_color": "#f5f5f5"
 }
